@@ -4,6 +4,7 @@ https://github.com/resident-uhlig/chrome-hyperiums7/issues
 XXXX-XX-XX XX:XX:XX Version X.X.X
 * Added link to forum on "last 20 messages" page (for alliances)
 * Added sum of Ground AvgP generation to controlled planets summary
+* Added notification for install or update of extension
 
 2013-12-12 20:25:00 Version 0.1.1
 * Bug fixes only
